tests/ui/g-policy-id-max-reserved.stderr
error[E0080]: evaluation panicked: dynamic policy id u16::MAX is reserved for static policy
 --> $RUST/core/src/panic.rs
  |
  = note: evaluation of `<hibana::g::Policy<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<0>, hibana::g::Msg<118, (), hibana::integration::cap::control::RouteDecisionKind>>, u16::MAX> as hibana::g::Choreography>::SOURCE` failed here
  |
 ::: src/g.rs
  |
  |             panic!("dynamic policy id u16::MAX is reserved for static policy");
  |             ------------------------------------------------------------------ in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  |         <Left as Choreography>::SOURCE.seq(<Right as Choreography>::SOURCE);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/g.rs
  |
  |         let left = <Left as Choreography>::SOURCE;
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/g.rs
  |
  |         let source = <Steps as Choreography>::SOURCE.eff_list();
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/g.rs
  |
  |     &ProjectedChoreography::<Steps>::PROGRAM_IMAGE
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |                 Self::STAMP,
  |                 ^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |     RoleProgram::new(&ValidatedRoleImage::<Steps, ROLE>::COMPILED_IMAGE)
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/role_program/program.rs
  |
  |     RoleProgram::new(&ValidatedRoleImage::<Steps, ROLE>::COMPILED_IMAGE)
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn hibana::global::role_program::program::project_choreography_role::<1, hibana::g::Route<Seq<hibana::g::Policy<hibana::g::Send<Role<0>, Role<0>, Msg<118, (), RouteDecisionKind>>, u16::MAX>, hibana::g::Send<Role<0>, Role<1>, Msg<10, ()>>>, Seq<hibana::g::Policy<hibana::g::Send<Role<0>, Role<0>, Msg<119, (), RouteDecisionKind>>, 7>, hibana::g::Send<Role<0>, Role<1>, Msg<20, ()>>>>>`
 --> src/global/role_program/program.rs
  |
  |         project_choreography_role(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
